--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <div class="card" id="img-background">
   </div> -->
   <div class="card">
-    <p>I will soon graduated from Le Wagon Coding Bootcamp in Tel Aviv. By education, I am an environmental engineer and I am currently working for Procter & Gamble in Brussels.</p>
-    <a id="btn-pink" href="https://www.linkedin.com/in/judithsaragossi/">Find ou more on my LinkedIn profile
+    <p>I will soon graduate from Le Wagon Coding Bootcamp in Tel Aviv. By education, I am an environmental engineer and I am currently working for Procter & Gamble in Brussels.</p>
+    <a id="btn-pink" href="https://www.linkedin.com/in/judithsaragossi/">Find out more on my LinkedIn profile
     </a>
   </div>
   <div class="card">
-    <h2>Follow me</h2>
+    <h3>Follow me...</h3>
     <ul class="list-inline">
       <li>
         <a href="https://www.facebook.com/judithsaragossi" target="_blank">
@@ -41,6 +41,7 @@
       </li>
     </ul>
   </div>
+</div>
 </div>
 </body>
 </html>
